[package]
name = "npm_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
color-eyre = "0.6.2"
exitcode = "1.1.2"
eyre = "0.6.8"
owo-colors = "3.5.0"
reqwest = { version = "0.11.12", features = ["gzip", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "fs", "io-std", "io-util"] }
